Corrigir link whatsapp e aumentar tamanho da página

--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -20,7 +20,7 @@
 				<h3>Analista e Desenvolvedor de Sistemas</h3>
 
 				<p><i class="fa fa-map-marker-alt"></i> Juazeiro do Norte - CE</p>
-				<a href="wa.me/5588996019489">
+				<a href="https://wa.me/5588996019489">
 					<i class=" fab fa-whatsapp"></i> <span>(88) 99601-9489</span>
 				</a>
 				<a href="mailto:izacgaldino@outlook.com">
