--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -107,8 +107,8 @@
 							<li>GO</li>
 							<li>PHP</li>
 							<li>Java</li>
-							<li>Javascript</li>
-							<li>Typescript</li>
+							<li>Javascript/Typescript</li>
+							<li>Python</li>
 							<li>NodeJS</li>
 							<li>ReactJS</li>
 						</ul>
