Mudar foto e atualizar habilidades

--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -86,7 +86,7 @@
 
 		<aside>
 			<div id="foto">
-				<img src="./assets/img/foto2.jpg" alt="Izac Galdino Foto">
+				<img src="./assets/img/foto3.png" alt="Izac Galdino Foto">
 			</div>
 
 			<section id="infos">
@@ -102,25 +102,39 @@
 				<h2>Skills</h2>
 
 				<ul>
-					<li>Linguagens:
+					<li class="titulo">Linguagens:
 						<ul>
 							<li>GO</li>
 							<li>PHP</li>
 							<li>Java</li>
-							<li>Javascript/Typescript</li>
+							<li>Javascript</li>
+							<li>Typescript</li>
 							<li>Python</li>
 							<li>NodeJS</li>
 							<li>ReactJS</li>
 						</ul>
 					</li>
-					<li>Banco de dados:
+					<li class="titulo">Banco de dados:
 						<ul>
 							<li>MySQL</li>
 							<li>Postgres</li>
 							<li>MongoDB</li>
 						</ul>
 					</li>
-					<li>Outras habilidades:
+					<li class="titulo">CI / CD Pipelines:
+						<ul>
+							<li>GitHub Actions</li>
+							<li>Bitbucket Pipelines</li>
+							<li>AWS CodePipeline</li>
+						</ul>
+					</li>
+					<li class="titulo">Testes automatizados:
+						<ul>
+							<li>End-to-end (Cypress)</li>
+							<li>Unitários</li>
+						</ul>
+					</li>
+					<li class="titulo">Outras habilidades:
 						<ul>
 							<li>Metodologias ágeis</li>
 							<li>Git</li>
@@ -128,19 +142,6 @@
 							<li>Docker</li>
 							<li>Terraform</li>
 							<li>AWS</li>
-							<li>CI / CD Pipelines:
-								<ul>
-									<li>GitHub Actions</li>
-									<li>Bitbucket Pipelines</li>
-									<li>AWS CodePipeline</li>
-								</ul>
-							</li>
-							<li>Testes automatizados:
-								<ul>
-									<li>End-to-end (Cypress)</li>
-									<li>Unitários</li>
-								</ul>
-							</li>
 						</ul>
 					</li>
 				</ul>
