Adiciar item como freelancer e corrigir data

--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -49,7 +49,7 @@
 					</li>
 				</ul>
 
-				<h3>Brisanet Telecomunicações <span>Jun/2020 - Set/2023</span></h3>
+				<h3>Brisanet Telecomunicações <span>Jun/2020 - Set/2022</span></h3>
 				<h4>Desenvolvedor Backend</h4>
 				<ul>
 					<li>
@@ -65,6 +65,9 @@
 				<ul>
 					<li>
 						Desenvolvimento de sistemas personalizados para diversos nichos e clientes, utilizando várias tecnologias.
+					</li>
+					<li>
+						Desenvolvi inúmeros websites e softwares de gerenciamento de negócios nas mais diversas plataformas e linguagens.
 					</li>
 				</ul>
 			</section>
