Senior Software Engineer

--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -17,7 +17,7 @@
 		<article>
 			<header>
 				<h1>Izac Galdino Lima Diniz</h1>
-				<h3>Analista e Desenvolvedor de Sistemas</h3>
+				<h3>Senior Software Engineer</h3>
 
 				<p><i class="fa fa-map-marker-alt"></i> Juazeiro do Norte - CE</p>
 				<a href="https://wa.me/5588996019489">
