--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -113,8 +113,6 @@
 							<li>Javascript</li>
 							<li>Typescript</li>
 							<li>Python</li>
-							<li>NodeJS</li>
-							<li>ReactJS</li>
 						</ul>
 					</li>
 					<li class="titulo">Banco de dados:
@@ -145,6 +143,9 @@
 							<li>Docker</li>
 							<li>Terraform</li>
 							<li>AWS</li>
+							<li>NodeJS</li>
+							<li>ReactJS</li>
+							<li>Spring</li>
 						</ul>
 					</li>
 				</ul>
