Adicionar currículo em inglês

--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -17,7 +17,7 @@
 		<article>
 			<header>
 				<h1>Izac Galdino Lima Diniz</h1>
-				<h3>Senior Software Engineer</h3>
+				<h3>Engenheiro de Software Sênior</h3>
 
 				<p><i class="fa fa-map-marker-alt"></i> Juazeiro do Norte - CE</p>
 				<a href="https://wa.me/5588996019489">
@@ -83,7 +83,7 @@
 
 				<h4>Técnico em Informatica</h4>
 				<p>No período entre 2011 - 2013</p>
-				<p>EEEP Francisca de ALbuquerque Moura</p>
+				<p>EEEP Francisca de Albuquerque Moura</p>
 			</section>
 		</article>
 
@@ -93,14 +93,11 @@
 			</div>
 
 			<section id="infos">
-				<p>Sou <strong>Analista e Desenvolvedor de Sistemas</strong>, já tenho uma boa bagagem na
-					<strong>criação de
-						softwares</strong>, pois iniciei meu trabalho na área em meados de 2016 como freelancer.
+				<p>
+					Sou <strong>Analista e Desenvolvedor de Sistemas</strong>, já tenho uma boa bagagem na <strong>criação de softwares</strong>, pois iniciei meu trabalho na área em meados de 2016 como freelancer.
 				</p>
 
-				<p>Atualmente atuo como Desenvolvedor <strong>Backend</strong>, mas tenho experiência como
-					<strong>Fullstack</strong>
-				</p>
+				<p>Atualmente atuo como Desenvolvedor <strong>Engenheiro de Software</strong>.</p>
 
 				<h2>Skills</h2>
 
