--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -54,7 +54,7 @@
 				<ul>
 					<li>
 						Analisar, codificar, testar, revisar e manter sistemas ou micro serviços, no caso de micro
-						serviços, gerir tembém a conexão entre eles.
+						serviços, gerir também a conexão entre eles.
 					</li>
 					<li>
 						Desenvolver consultas de acesso a banco de dados relacionais de forma eficaz.
