--- a/curriculo/curriculo_en.html
+++ b/curriculo/curriculo_en.html
@@ -38,7 +38,18 @@
 			<section id="experiencias">
 				<h2>Experiences</h2>
 
-				<h3>Bemobi <span>Sep/2022 - Currently</span></h3>
+				<h3>CI&T <span>Set/2024 - Currently</span></h3>
+				<h4>Senior Software Developer</h4>
+				<ul>
+					<li>
+						Handle business rules and develop the best approaches for new features in microservices.
+					</li>
+					<li>
+						Work with various technologies and infrastructure for microservices.
+					</li>
+				</ul>
+
+				<h3>Bemobi <span>Sep/2022 - Sep/2024</span></h3>
 				<h4>Systems Developer</h4>
 				<ul>
 					<li>
@@ -141,6 +152,7 @@
 							<li>Docker</li>
 							<li>Terraform</li>
 							<li>AWS</li>
+							<li>GCP</li>
 							<li>NodeJS</li>
 							<li>ReactJS</li>
 							<li>Spring</li>
