--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -38,8 +38,19 @@
 			<section id="experiencias">
 				<h2>Experiências</h2>
 
-				<h3>Bemobi <span>Set/2022 - Atualmente</span></h3>
-				<h4>Desenvolvedor de Sistemas</h4>
+				<h3>CI&T <span>Set/2024 - Atualmente</span></h3>
+				<h4>Desenvolvedor de Sistemas Sênior</h4>
+				<ul>
+					<li>
+						Lidar com regras de negócios e elaborar as melhores abordagens para novas funcionalidades em microserviços.
+					</li>
+					<li>
+						Lidas com as mais diversas tecnologias e infraestrutura para microserviços.
+					</li>
+				</ul>
+
+				<h3>Bemobi <span>Set/2022 - Set/2024</span></h3>
+				<h4>Desenvolvedor de Sistemas Pleno</h4>
 				<ul>
 					<li>
 						Desenvolvimento e manutenção de sistemas atuais e legados. 
@@ -140,6 +151,7 @@
 							<li>Docker</li>
 							<li>Terraform</li>
 							<li>AWS</li>
+							<li>GCP</li>
 							<li>NodeJS</li>
 							<li>ReactJS</li>
 							<li>Spring</li>
